--- a/program/AlomalyTimeSeriesDetector/AlomalyTimeSeriesDetector/AlomalyTimeSeriesDetector.csproj
+++ b/program/AlomalyTimeSeriesDetector/AlomalyTimeSeriesDetector/AlomalyTimeSeriesDetector.csproj
@@ -53,6 +53,12 @@
     <Compile Include="common\ReadDataFromFile.cs" />
     <Compile Include="entity\NSubsequence.cs" />
     <Compile Include="entity\NTimeSeries.cs" />
+    <Compile Include="HotSaxForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HotSaxForm.Designer.cs">
+      <DependentUpon>HotSaxForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,6 +73,9 @@
     <Compile Include="TimeSeriesPlot.Designer.cs">
       <DependentUpon>TimeSeriesPlot.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="HotSaxForm.resx">
+      <DependentUpon>HotSaxForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
