--- a/program/AlomalyTimeSeriesDetector/AlomalyTimeSeriesDetector/AlomalyTimeSeriesDetector.csproj
+++ b/program/AlomalyTimeSeriesDetector/AlomalyTimeSeriesDetector/AlomalyTimeSeriesDetector.csproj
@@ -95,6 +95,12 @@
     <Compile Include="TimeSeriesPlot.Designer.cs">
       <DependentUpon>TimeSeriesPlot.cs</DependentUpon>
     </Compile>
+    <Compile Include="VariableLengthMethod.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VariableLengthMethod.Designer.cs">
+      <DependentUpon>VariableLengthMethod.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="HotSaxForm.resx">
       <DependentUpon>HotSaxForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -118,6 +124,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="TimeSeriesPlot.resx">
       <DependentUpon>TimeSeriesPlot.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VariableLengthMethod.resx">
+      <DependentUpon>VariableLengthMethod.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
