--- a/program/AlomalyTimeSeriesDetector/AlomalyTimeSeriesDetector/AlomalyTimeSeriesDetector.csproj
+++ b/program/AlomalyTimeSeriesDetector/AlomalyTimeSeriesDetector/AlomalyTimeSeriesDetector.csproj
@@ -50,6 +50,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="common\AnomalFactorCalculator.cs" />
     <Compile Include="common\QuadraticRegression.cs" />
     <Compile Include="common\QuadraticSegmentation.cs" />
     <Compile Include="common\Distance.cs" />
