--- a/program/AlomalyTimeSeriesDetector/AlomalyTimeSeriesDetector/AlomalyTimeSeriesDetector.csproj
+++ b/program/AlomalyTimeSeriesDetector/AlomalyTimeSeriesDetector/AlomalyTimeSeriesDetector.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="common\AnomalFactorCalculator.cs" />
+    <Compile Include="common\ExtreamePointSegmentation.cs" />
     <Compile Include="common\QuadraticRegression.cs" />
     <Compile Include="common\QuadraticSegmentation.cs" />
     <Compile Include="common\Distance.cs" />
@@ -64,6 +65,12 @@
     <Compile Include="common\Utils.cs" />
     <Compile Include="entity\NSubsequence.cs" />
     <Compile Include="entity\NTimeSeries.cs" />
+    <Compile Include="ExtreamPointForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ExtreamPointForm.Designer.cs">
+      <DependentUpon>ExtreamPointForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="HotSaxForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -102,6 +109,9 @@
     <Compile Include="VariableLengthMethod.Designer.cs">
       <DependentUpon>VariableLengthMethod.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ExtreamPointForm.resx">
+      <DependentUpon>ExtreamPointForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="HotSaxForm.resx">
       <DependentUpon>HotSaxForm.cs</DependentUpon>
     </EmbeddedResource>
